tests/paczka1/fuzzy1/64104484.err
Error in line 2: A429 S45 5,0
Error in line 20: 4viknwXEU A429 50,41
Error in line 21: 4viknwXEU A429 -3,0
Error in line 27: yfVdRSKmRCH S45 88,1
Error in line 38: e1k0U5uNBG S618 -6,9
